--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Custom Google Cloud monitoring v3 client",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover _mocha ./test && istanbul --text check-coverage --statements 100 --functions 100 --branches 100 --lines 100",
-    "test-no-cov": "mocha test",
+    "test": "mocha test",
+    "test-cov": "istanbul cover _mocha ./test && istanbul --text check-coverage --statements 100 --functions 100 --branches 100 --lines 100",
     "test-watch": "nodemon -x mocha ./test",
     "lint": "standard"
   },
@@ -40,9 +40,7 @@
   "dependencies": {
     "101": "^1.6.2",
     "cast-array": "^1.0.1",
-    "googleapis": "^14.2.0",
-    "rxjs": "^5.0.0-rc.5",
-    "timeout-then": "^1.1.0"
+    "googleapis": "^14.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
